<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2022-2023 Universitat Politècnica de València
  ~ Authors: David de Andrés and Juan Carlos Ruiz
  ~          Fault-Tolerant Systems
  ~          Instituto ITACA
  ~          Universitat Politècnica de València
  ~
  ~ Distributed under MIT license
  ~ (See accompanying file LICENSE.txt)
  -->
<!-- Menu for all the fragments regardless their level -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Elements shown in the ActionBar is there is room -->

    <!-- Displays the current level -->
    <item
        android:id="@+id/mLevelInfo"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/level_info"
        app:showAsAction="ifRoom" />
    <!-- Enables going forward several levels at once -->
    <item
        android:id="@+id/mForward"
        android:icon="@drawable/ic_forward"
        android:title="@string/forward"
        app:actionViewClass="android.widget.EditText"
        app:showAsAction="ifRoom|collapseActionView" />
    <!-- Elements moved to the overflow menu -->

    <!-- Hides the help information -->
    <item
        android:id="@+id/mHideHelp"
        android:icon="@drawable/ic_hide_help"
        android:title="@string/hide_help"
        app:showAsAction="never" />
    <!-- Shows the help information -->
    <item
        android:id="@+id/mShowHelp"
        android:icon="@drawable/ic_show_help"
        android:title="@string/show_help"
        app:showAsAction="never" />
</menu>