<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2022-2024 Universitat Politècnica de València
  ~ Authors: David de Andrés and Juan Carlos Ruiz
  ~          Fault-Tolerant Systems
  ~          Instituto ITACA
  ~          Universitat Politècnica de València
  ~
  ~ Distributed under MIT license
  ~ (See accompanying file LICENSE.txt)
  -->
<!-- Displays information for the first level of the fragments -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.FirstLevelFragment">

    <!-- Information for the first level of the fragments -->
    <TextView
        android:id="@+id/tvHelpFirstLevels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/first_level_help"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/tvSharedHelpFirstLevels"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <!-- Help about how the app is used -->
    <TextView
        android:id="@+id/tvSharedHelpFirstLevels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/shared_help"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHelpFirstLevels" />

    <!-- Navigates to next level -->
    <Button
        android:id="@+id/bNextFirstLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>